// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuSelect applies translations 1`] = `
<div
  className="ais-MenuSelect"
>
  <select
    className="ais-MenuSelect-select"
    onChange={[Function]}
    value="ais__see__all__option"
  >
    <option
      className="ais-MenuSelect-option"
      value="ais__see__all__option"
    >
      Everything
    </option>
    <option
      className="ais-MenuSelect-option"
      value="white"
    >
      white
       (
      10
      )
    </option>
    <option
      className="ais-MenuSelect-option"
      value="black"
    >
      black
       (
      20
      )
    </option>
    <option
      className="ais-MenuSelect-option"
      value="blue"
    >
      blue
       (
      30
      )
    </option>
    <option
      className="ais-MenuSelect-option"
      value="green"
    >
      green
       (
      30
      )
    </option>
    <option
      className="ais-MenuSelect-option"
      value="red"
    >
      red
       (
      30
      )
    </option>
  </select>
</div>
`;

exports[`MenuSelect default menu select 1`] = `
<div
  className="ais-MenuSelect"
>
  <select
    className="ais-MenuSelect-select"
    onChange={[Function]}
    value="ais__see__all__option"
  >
    <option
      className="ais-MenuSelect-option"
      value="ais__see__all__option"
    >
      See all
    </option>
    <option
      className="ais-MenuSelect-option"
      value="white"
    >
      white
       (
      10
      )
    </option>
    <option
      className="ais-MenuSelect-option"
      value="black"
    >
      black
       (
      20
      )
    </option>
    <option
      className="ais-MenuSelect-option"
      value="blue"
    >
      blue
       (
      30
      )
    </option>
    <option
      className="ais-MenuSelect-option"
      value="green"
    >
      green
       (
      30
      )
    </option>
    <option
      className="ais-MenuSelect-option"
      value="red"
    >
      red
       (
      30
      )
    </option>
  </select>
</div>
`;

exports[`MenuSelect default menu select with custom className 1`] = `
<div
  className="ais-MenuSelect MyCustomMenuSelect"
>
  <select
    className="ais-MenuSelect-select"
    onChange={[Function]}
    value="ais__see__all__option"
  >
    <option
      className="ais-MenuSelect-option"
      value="ais__see__all__option"
    >
      See all
    </option>
    <option
      className="ais-MenuSelect-option"
      value="white"
    >
      white
       (
      10
      )
    </option>
    <option
      className="ais-MenuSelect-option"
      value="black"
    >
      black
       (
      20
      )
    </option>
    <option
      className="ais-MenuSelect-option"
      value="blue"
    >
      blue
       (
      30
      )
    </option>
    <option
      className="ais-MenuSelect-option"
      value="green"
    >
      green
       (
      30
      )
    </option>
    <option
      className="ais-MenuSelect-option"
      value="red"
    >
      red
       (
      30
      )
    </option>
  </select>
</div>
`;

exports[`MenuSelect default menu select with no refinement 1`] = `
<div
  className="ais-MenuSelect ais-MenuSelect--noRefinement"
>
  <select
    className="ais-MenuSelect-select"
    onChange={[Function]}
    value="ais__see__all__option"
  >
    <option
      className="ais-MenuSelect-option"
      value="ais__see__all__option"
    >
      See all
    </option>
  </select>
</div>
`;
